Edited css and html to create a landing page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Hero Section: This is the main banner at the top of the page -->
     <section class="hero">
         <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
+        <h1>Give Small. Change Lives Big</h1>
         <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
+        <p>Even $10 can bring clean water to those who need it most and you'll see the real impact your gift creates.</p>
     </section>
 
     <!-- Story Section: This tells the story of the nonprofit -->
@@ -25,22 +25,22 @@
     <!-- Real-World Impact Story Section -->
     <section class="impact-story">
         <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
+        <h3>Real Impact: Meet Samuel</h3>
         <!-- Container for image and text -->
         <div class="impact-content">
             <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
+            <img src="https://cdn2.dropmarkusercontent.com/52043/40ba41fc45e5e377672c3ed45d1f0b554df90beb280d7c7278bb8013ce08bee4/preview/4800_Ethiopia_2019_CG-.jpg?Expires=1757193641&Signature=AsHbwrs-ntP3DasbIPkaT5U66YNIQ2AvEL6XLOHDzMfWSRzki22UBdXczGzcS9Ze0VtXFjICM5~kjUQP3AZIGG-~RSVLdKxGLjQgWHZXSdul4o~58s6kbK225Z669r8reUp9IlKaxul-W7Nfjl4GM0SugduwAnQKnmKHVyhURsESoG3NIWbW5RfsxLOQRZige39V3V2fwFwZgswNCkX7tKAusHTRYVgpWy87pV4zhaqiB06hZqd-P2UcRM9z576a74oOpUowoCOnxrGsWP1fVAdCWMPSQoTVyh5sM6~Owk~On4c~iUVWmpEEHfQnZtR892lm8~awwC~yDJkCV1FAgQ__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="Samuel smiling with clean water" class="impact-image">
             <!-- Impact story text -->
             <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
+                Samuel used to drink from a nearby river that often made him sick. With your help, his community now has access to clean water. Today, Samuel can stay healthy, play with his friends, and dream about his future with a big smile on his face.
             </p>
         </div>
     </section>
 
     <!-- Call-to-Action Section: This encourages visitors to take action -->
     <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
+        <h2>Give Now & Track the impact</h2>
+        <p>Give $10 → Provide clean water for one person.</p>
         <a href="#" class="donate-button">Donate Now</a>
     </section>
 </body>
